# digital-twin-aws

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/data/: facts.json  summary.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
scripts/: deploy.sh
terraform/: outputs.tf  prod.tfvars  versions.tf
